src/css/_minicart.scss
//
//  Minicart
//  ____________________________________________
.minicart {
    right: 0;
    transform: translateX(100%);

    .minicart-open & {
        transform: translateX(0);
    }

    h2 {
        margin-bottom: 20px;
        padding-bottom: 5px;
        border-bottom: 1px solid #efefef;
    }

    .item {
        display: flex;
        padding: 0 15px 15px 0;
        margin-bottom: 15px;
        border-bottom: 1px solid #eee;
        position: relative;

        figure {
            width: 100px;
            margin: 0 15px 0 0;
        }

        .price {
            display: block;
        }

        .icon-remove {
            position: absolute;
            top: 0;
            right: 0;
            cursor: pointer;
            color: #777;

            &:hover {
                color: #000;
            }
        }
    }

    .removed-item {
        cursor: pointer;

        &:hover {
            opacity: .8;
        }
    }

    .cart-empty {
        margin-bottom: 20px;
    }

    .btn {
        width: 100%;
    }

    .price-total {
        padding-bottom: 20px;
    }
}

